# riptree

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci.yml  dpkg.yml  release.yml
debian/: postinst  prerm
locales/: en-US.ftl  en_US.ftl  zh-CN.ftl  zh_CN.ftl
src/: args.rs  color.rs  help.rs  i18n.rs  ignore.rs  main.rs  print.rs  prune.rs
