[package]
name = "riptree"
version = "0.1.2"
edition = "2021"

[dependencies]
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9"

[[bin]]
name = "rt"
path = "src/main.rs"

#[package.metadata.deb]
#maintainer = "TC999 <你的邮箱>"
#description = "Cross-platform Rust rewrite of the tree command"
#depends = ""
#section = "utils"
#priority = "optional"
#assets = [
#    ["target/release/rt", "usr/bin/rt", "755"],
#    ["locales/*.ftl", "usr/share/rt/locales/*.ftl", "644"]
#]